--- a/index.html
+++ b/index.html
@@ -18,30 +18,32 @@
         </div>
     </header>
 
+
     <div class="container-lead-intro">
-
-        <h1 class="lead__title">
-            Путешествия по России
-        </h1>
-        <p class="lead__subtitle">
-            Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а здесь.
-        </p>
-        <img src="./images/lead-polka.jpg" alt="В поезде" class="lead__image">
-        <p class="lead__caption">
-            ваша полка — верхняя
-        </p>
-
+        <section class="lead">
+            <h1 class="lead__title">
+                Путешествия по России
+            </h1>
+            <p class="lead__subtitle">
+                Настоящая&nbsp;страна&nbsp;не&nbsp;в&nbsp;выпусках новостей, а здесь.
+            </p>
+            <img src="./images/lead-polka.jpg" alt="В поезде" class="lead__image">
+            <p class="lead__caption">
+                ваша полка — верхняя
+            </p>
+        </section>
         <section class="intro">
             <h3 class="intro__title">
                 Чего мы там не&nbsp;видели?
             </h3>
-            <p class="intro__subtitle">
+            <p class="intro__text">
                 По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, нотолько 36% планируют провести отпуск в
                 родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым
                 морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без
                 миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая
                 молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и&nbsp;проехала 20 тысяч
-                километров по&nbsp;родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+                километров по&nbsp;родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+                отпуска.
             </p>
             <ul class="intro__list">
                 <li class="intro__list-item">Часовых поясов <span class="intro__list-item_value">11</span></li>
@@ -55,7 +57,7 @@
         </section>
     </div>
 
-    <div class="photo-grid">
+    <section class="photo-grid" aria-label="Фотографии">
         <img src="./images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__image">
         <img src="./images/photo-grid-atharva-tulsi.jpg" alt="Гора Атхарва Тулси" class="photo-grid__image">
         <img src="./images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__image">
@@ -68,10 +70,10 @@
         <img src="./images/photo-grid-kamchatka-2.jpg" alt="Вулканы" class="photo-grid__image">
         <img src="./images/photo-grid-baikal-2.jpg" alt="Байкал" class="photo-grid__image">
         <img src="./images/photo-grid-ergaki.jpg" alt="Ергаки" class="photo-grid__image">
-    </div>
+    </section>
 
-    <section class="places">
-        <div class="place">
+    <section class="places" aria-label="Интересные места">
+        <article class="place">
             <div class="place__info-container">
                 <h2 class="title">
                     Куршская коса&nbsp;&nbsp;
@@ -91,19 +93,22 @@
                 <div class="place__paragraph-cotainer">
                     <p class="place__paragraph place__paragraph_top">
                         Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного
-                        Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
+                        Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой.
+                        Уникальная
                         природная зона на&nbsp;краю российского анклава.
                     </p>
                     <p class="place__paragraph">
-                        На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя там же по&nbsp;соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое наследие россыпи
+                        На этом Калининградская область не заканчивается. Для&nbsp;путешественника и&nbsp;исследователя
+                        там же по&nbsp;соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое
+                        наследие россыпи
                         небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие
                         природы и&nbsp;запах стального, прохладного моря.
                     </p>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
             <div class="place__info-container">
                 <h2 class="title">
                     Кольский
@@ -123,18 +128,22 @@
                 <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__paragraph-cotainer">
                     <p class="place__paragraph place__paragraph_top">
-                        Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
+                        Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
                         тайга,&nbsp;а&nbsp;на север — Ледовитый океан, прикидывающийся Баренцевым морем.
                     </p>
                     <p class="place__paragraph">
-                        Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в&nbsp;Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об&nbsp;уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно&nbsp;накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
+                        Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в&nbsp;Териберке.
+                        Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об&nbsp;уроках географии.
+                        Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов
+                        вас давно&nbsp;накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с
+                        билетом
                         в&nbsp;Мурманск.
                     </p>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
             <div class="place__info-container">
                 <h2 class="title">
                     Алтай
@@ -153,17 +162,21 @@
                 <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__paragraph-cotainer">
                     <p class="place__paragraph place__paragraph_top">
-                        Алтай — одно из красивейших мест в&nbsp;России. 
-                        В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А&nbsp;если вы откроете в&nbsp;автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом здешних мест — горным воздухом.
+                        Алтай — одно из красивейших мест в&nbsp;России.
+                        В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами,
+                        горные реки и озёра. А&nbsp;если вы откроете в&nbsp;автомобиле окна, сможете познакомиться
+                        с&nbsp;невидимым чудом здешних мест — горным воздухом.
                     </p>
                     <p class="place__paragraph">
-                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
+                        Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие
+                        местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на равнинах
+                        пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
                     </p>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
             <div class="place__info-container">
                 <h2 class="title">
                     Зимний Байкал
@@ -181,18 +194,22 @@
                 <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__paragraph-cotainer">
                     <p class="place__paragraph place__paragraph_top">
-                        Всем известен Байкал как крупнейшее озеро 
-                        в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно из&nbsp;красивейших мест в России.
+                        Всем известен Байкал как крупнейшее озеро
+                        в&nbsp;мире.&nbsp;Многие также знают, что это самый большой источник пресной воды и одно
+                        из&nbsp;красивейших мест в России.
                     </p>
                     <p class="place__paragraph">
-                        Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
-                        к&nbsp;мотоциклу, и&nbsp;тандем старается развить как&nbsp;можно бóльшую&nbsp;скорость&nbsp;на&nbsp;льду.&nbsp;В&nbsp;марте&nbsp;2019&nbsp;года на фестивале «Байкальская&nbsp;миля»&nbsp;был поставлен мировой рекорд — 197.011 км/ч.
+                        Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой
+                        вид спорта, когда лыжник привязывает себя
+                        к&nbsp;мотоциклу, и&nbsp;тандем старается развить как&nbsp;можно
+                        бóльшую&nbsp;скорость&nbsp;на&nbsp;льду.&nbsp;В&nbsp;марте&nbsp;2019&nbsp;года на фестивале
+                        «Байкальская&nbsp;миля»&nbsp;был поставлен мировой рекорд — 197.011 км/ч.
                     </p>
                 </div>
             </div>
-        </div>
+        </article>
 
-        <div class="place">
+        <article class="place">
             <div class="place__info-container">
                 <h2 class="title">
                     Карелия
@@ -210,40 +227,47 @@
                 <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__paragraph-cotainer">
                     <p class="place__paragraph">
-                        Сибирь заканчивается не на Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает&nbsp;на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
-                        В&nbsp;девственном лесу на сотню километров не встретишь тропы. А&nbsp;на редких тропинках деревья 
+                        Сибирь заканчивается не на Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница
+                        не растёт западнее Водлозера. Зато здесь она вымахивает&nbsp;на 30 метров — леса карельских
+                        национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже
+                        больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал
+                        его Иван Грозный.
+                        В&nbsp;девственном лесу на сотню километров не встретишь тропы. А&nbsp;на редких тропинках
+                        деревья
                         в&nbsp;паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                     </p>
                 </div>
             </div>
-        </div>
+        </article>
     </section>
-
     <section class="cover">
-        <div class="cover__title-container">
-            <h2 class="title title__cover">
-                <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link all-links"
-                target="blanc">До Байкала «на собаках»</a>
-            </h2>
-            <p class="cover__paragraph">
-                По мотивам учебной темы о&nbsp;Транссибе&nbsp;— путешествие от&nbsp;столицы&nbsp;до Байкала на электричках.
-            </p>
-        </div>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link all-links" target="blanc">
+            <div class="cover__background">
+                <div class="cover__title-container">
+                    <h2 class="title title__cover">До Байкала «на собаках» </h2>
+                    <p class="cover__paragraph">
+                        По мотивам учебной темы о&nbsp;Транссибе&nbsp;— путешествие от&nbsp;столицы&nbsp;до Байкала на
+                        электричках.
+                    </p>
+                </div>
+            </div>
+        </a>
     </section>
-
     <footer class="footer">
-        <ul class="footer__links">
-            <li class="footer__link-item"><a href="https://yandex.ru/maps" class="footer__link all-links"
-                    target="blanc">Карты</a></li>
-            <li class="footer__link-item"><a href="https://yandex.ru/pogoda" class="footer__link all-links"
-                    target="blanc">Погода</a></li>
-            <li class="footer__link-item"><a href="https://rasp.yandex.ru" class="footer__link all-links"
-                    target="blanc">Расписание</a></li>
-            <li class="footer__link-item"><a href="https://calendar.yandex.ru" class="footer__link all-links"
-                    target="blanc">Календарь</a></li>
-            <li class="footer__link-item"><a href="https://travel.yandex.ru" class="footer__link all-links"
-                    target="blanc">Путешествия</a></li>
-        </ul>
+        <nav>
+            <ul class="footer__links">
+                <li class="footer__link-item"><a href="https://yandex.ru/maps" class="footer__link all-links"
+                        target="blanc">Карты</a></li>
+                <li class="footer__link-item"><a href="https://yandex.ru/pogoda" class="footer__link all-links"
+                        target="blanc">Погода</a></li>
+                <li class="footer__link-item"><a href="https://rasp.yandex.ru" class="footer__link all-links"
+                        target="blanc">Расписание</a></li>
+                <li class="footer__link-item"><a href="https://calendar.yandex.ru" class="footer__link all-links"
+                        target="blanc">Календарь</a></li>
+                <li class="footer__link-item"><a href="https://travel.yandex.ru" class="footer__link all-links"
+                        target="blanc">Путешествия</a></li>
+            </ul>
+        </nav>
         <p class="footer__copyright">
             © 2022. Косинова Лидия
         </p>
